# Camera2_ZBar

./: .gitignore  LICENSE  README.md  settings.gradle
Application/: build.gradle
Application/src/main/: AndroidManifest.xml
Application/src/main/java/com/example/android/camera2basic/: Camera2BasicFragment.java  Result.java  ZBarDecoder.java
Application/src/main/res/drawable/: circle_bg.xml
Application/src/main/res/layout/: barcode_dialog.xml  fragment_camera2_basic.xml  image_dialog.xml
Application/src/main/res/layout-land/: fragment_camera2_basic.xml
Application/src/main/res/values/: base-strings.xml  strings.xml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: beacons.json  cubicles.json  data.json  data_1.json
app/src/main/cpp/: deblur.cpp  localise.cpp  pathPlanning.cpp  test_trilateration.cpp
app/src/main/java/com/example/android/camera2basic/: AutoFitTextureView.java  BarcodeFormat.java  BarcodeRectDrawView.java  Camera2BasicFragment.java  CameraActivity.java  CvUtil.java  GraphicDecoder.java  HomeActivity.java  LoginActivity.java  PathPlanActivity.java  ToastHelper.java  ZBarDecoder.java  ZbarData.java  Zoom.java
app/src/main/java/com/example/android/camera2basic/UserDefinedTargets/: RefFreeFrame.java  RefFreeFrameGL.java  UserDefinedTargetRenderer.java  UserDefinedTargets.java
app/src/main/java/com/example/android/camera2basic/UserDefinedTargets/sample/: SampleActivityBase.java  SampleAppMenu.java  SampleAppMenuAnimator.java  SampleAppMenuGroup.java  SampleAppMenuView.java  SampleAppMessage.java  SampleAppRenderer.java  SampleAppRendererControl.java  SampleAppTimer.java  SampleApplicationControl.java  SampleApplicationException.java  SampleApplicationSession.java  SampleRendererBase.java
app/src/main/java/com/example/android/camera2basic/UserDefinedTargets/utils/: Constants.java  CubeObject.java  CubeShaders.java  LoadingDialogHandler.java  MeshObject.java  SampleAppMenuInterface.java  SampleApplicationGLView.java  SampleMath.java  SampleUtils.java  Texture.java  VideoBackgroundShader.java
app/src/main/java/com/example/android/camera2basic/adapter/: ItemGridAdapter.java  ItemListAdapter.java
app/src/main/java/com/example/android/camera2basic/bluetooth/: BeaconLoc.java  BeaconStore.java  BluetoothClient.java
app/src/main/java/com/example/android/camera2basic/callback/: CameraCallBackListener.java  NavigateCallBackListener.java
app/src/main/java/com/example/android/camera2basic/data/: BarcodeFormat.java  DataStore.java  ItemData.java  LocationItem.java  LocationStore.java  Result.java  ZbarData.java
app/src/main/java/com/example/android/camera2basic/location/: AndroidLocationProvider.java  TestLocations.java
app/src/main/java/com/example/android/camera2basic/ui/: AutoFitTextureView.java  BarcodeRectDrawView.java  DisplayUtil.java  LocationAnimator.java  ToastHelper.java
app/src/main/java/com/example/android/camera2basic/ui/beaconview/: BeaconView.java  BeaconViewFragment.java  ColorUtil.java  CvUtil.java
app/src/main/java/com/example/android/camera2basic/ui/beaconview/chart/: BeaconChart.java  BeaconChartFragment.java  BeaconLineChart.java  RssiFilterLineChart.java
app/src/main/java/com/example/android/camera2basic/ui/beaconview/map/: BeaconMap.java  BeaconMapBackground.java  BeaconMapFragment.java
app/src/main/java/com/example/android/camera2basic/ui/beaconview/pathplanning/: BeaconNavigateFragment.java
app/src/main/java/com/example/android/camera2basic/ui/beaconview/radar/: BeaconRadar.java  BeaconRadarFragment.java
app/src/main/java/com/example/android/camera2basic/util/: GlobalConstants.java  GraphicDecoder.java  ZBarDecoder.java  Zoom.java
app/src/main/jni/: Android.mk  com_example_android_camera2basic_CvUtil.cpp
app/src/main/res/drawable/: button_bg.xml  circle_index_bg.xml  circle_press_bg.xml  circle_scan_bg.xml  data_item_bg.xml  data_nav_bg.xml  item_bg.xml  toast_bg.xml
app/src/main/res/layout/: activity_home.xml  activity_login.xml  barcode_dialog.xml  data_item.xml  empty_list_dialog.xml  fragment_beacon_navigate.xml  fragment_camera2_basic.xml  image_dialog.xml  location_item.xml  pick_pending_dialog.xml  recyclerview_item.xml  sample_app_menu_layer.xml  skip_dialog.xml  toast_result.xml
app/src/main/res/layout-land/: activity_home.xml  activity_login.xml  activity_path_plan.xml  camera_overlay_udt.xml  fragment_beacon_navigate.xml  fragment_camera2_basic.xml
app/src/main/res/values/: base-strings.xml  colors.xml  strings.xml
gradle/wrapper/: gradle-wrapper.properties
